compatibility-tests/compile-fail/tests/ui/duplication-source-field.stderr
error: Multiple `source` attributes are not supported on a field
 --> $DIR/duplication-source-field.rs:8:17
  |
8 |         #[snafu(source)]
  |                 ^^^^^^
